songs-service/k8s/base/postgresql_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: songs-service
    app.openshift.io/runtime: postgresql
    app.kubernetes.io/part-of: right-lyrics
  name: songs-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: songs-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: songs-service
    spec:
      containers:
        - image: registry.redhat.io/rhscl/postgresql-96-rhel7:latest
          imagePullPolicy: Always
          name: songs-postgresql
          ports:
            - containerPort: 5432
