songs-service/k8s/base/songs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: songs-postgresql,hits-service
  labels:
    app: songs-service
    version: "1.2"
    app.openshift.io/runtime: spring
    app.kubernetes.io/part-of: right-lyrics
  name: songs-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: songs-service
      version: "1.2"
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: songs-service
        version: "1.2"
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc.cluster.local:5000/right-lyrics/songs-service:1.2
          imagePullPolicy: Always
          name: songs-service
          ports:
            - containerPort: 8080
