songs-service/k8s/base/songs_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: songs-postgresql
  labels:
    app: songs-service
    app.openshift.io/runtime: java
    app.kubernetes.io/part-of: right-lyrics
  name: songs-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: songs-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: songs-service
    spec:
      containers:
        - image: quay.io/right-lyrics/songs-service:1.1
          imagePullPolicy: Always
          name: songs-service
          ports:
            - containerPort: 8080
