songs-service/k8s/base/songs-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: songs  
spec:
  rules:
    - host: right.lyrics
      http:
        paths:
          - path: /api/song
            backend:
              serviceName: songs-service
              servicePort: 8080
